--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="hero">
         <div class="hero-video-container">
             <video autoplay muted loop playsinline class="hero-video" id="heroVideo">
-                <source src="assets/video/hero.mp4" type="video/mp4">
+                <source src="assets/video/video_ynov_complet.mp4" type="video/mp4">
             </video>
             <div class="hero-overlay"></div>
             <div class="hero-grain"></div>
@@ -128,7 +128,7 @@
             <!-- Paris 1889 -->
             <article class="destination-card" data-epoch="paris-1889">
                 <div class="card-image-container">
-                    <img src="assets/images/paris-1889.jpg" alt="Paris 1889 - Belle Époque" class="card-image">
+                    <img src="assets/images/hero.png" alt="Paris 1889 - Belle Époque" class="card-image">
                     <div class="card-image-overlay"></div>
                 </div>
                 <div class="card-content">
@@ -175,7 +175,7 @@
             <!-- Crétacé -->
             <article class="destination-card" data-epoch="cretace">
                 <div class="card-image-container">
-                    <img src="assets/images/cretace.jpg" alt="Crétacé - Ère des Dinosaures" class="card-image">
+                    <img src="assets/images/hero2.png" alt="Crétacé - Ère des Dinosaures" class="card-image">
                     <div class="card-image-overlay"></div>
                 </div>
                 <div class="card-content">
@@ -222,7 +222,7 @@
             <!-- Florence 1504 -->
             <article class="destination-card" data-epoch="florence-1504">
                 <div class="card-image-container">
-                    <img src="assets/images/florence-1504.jpg" alt="Florence 1504 - Renaissance" class="card-image">
+                    <img src="assets/images/hero3.png" alt="Florence 1504 - Renaissance" class="card-image">
                     <div class="card-image-overlay"></div>
                 </div>
                 <div class="card-content">
@@ -432,6 +432,7 @@
         </div>
     </div>
 
+    <script src="js/config.js"></script>
     <script src="js/main.js"></script>
     <script src="js/chatbot.js"></script>
 </body>
