--- a/index.html
+++ b/index.html
@@ -441,8 +441,8 @@
         }
     </script>
 
-    <script src="js/config.js"></script>
-    <script src="js/main.js"></script>
-    <script type="module" src="js/chatbot.js"></script>
+    <script src="js/config.js?v=2"></script>
+    <script src="js/main.js?v=2"></script>
+    <script type="module" src="js/chatbot.js?v=2"></script>
 </body>
 </html>
